Fix statistics comparison for non-money metrics